@startuml
'https://plantuml.com/class-diagram

'电池溯源模块
package 电池模块 <<Rectangle>> {
class Battery {
电池id
批次号
充放电次数
出厂日期
电池类型代码
规格代码
标称电压
标称容量
其他电池信息
电池状态
当前所有者
溯源记录
+ 查询溯源记录()
+ 安全认证()
# 电池流转()
# 电池拆解()
+ 查询电池状态()
}
}


'机构准入模块
package 企业准入模块 <<Rectangle>> {
class EntAccess {
address
企业名称
统一社会信用代码
电话
法定代表人
地址
状态（正常、注销）
备注
准入审批方address

+ 查询企业准入信息()
# 准入审批()
}

'class EntAccess {
'已准入的企业列表
'机构类型与企业id映射
'企业id与机构类型映射
'企业id-准入状态映射
'
'+ 企业准入()
'+ 企业信息变更()
'+ 根据企业id查找对应机构类型()
'+ 根据机构类型查找对应企业()
'}
'note left of EntAccess
'企业准入合约
'企业信息变更需要特定权限
'end note
'
'Enterprise --> EntAccess

}

'积分模块
package 积分模块 <<Rectangle>> {
class Point {
账户
可用积分
冻结积分
账户状态（正常，冻结）
积分变更记录

+ 增加积分()
+ 扣减积分()
+ 查看积分()
+ 查看积分记录()
+ 积分转移()
}
note left of Point
账户积分合约
end note

class PointTrade {
卖方账户
买方账户
交易金额
交易状态
发起时间
交易时间
备注

+ 交易发起()
+ 交易认领()
+ 交易执行()
+ 交易终止()
}
note left of PointTrade
积分交易合约
end note

Point --> PointTrade
}



@enduml